[package]
name = "firehose"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde_derive = { version = "1.0" }
base64 = { version = "0.22.1" }
x509-parser = { version = "0.16.0" }
ct-structs = { git = "https://github.com/mpalmer/ct-structs" }
deku = { git = "https://github.com/mpalmer/deku", branch = "id-endian" }
warp = "0.3.7"
futures-util = "0.3.31"
futures = "0.3.31"
tokio-stream = { version = "0.1.16", features = ["sync"] }
